# vb-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  ai_agent_deepseek.py  app.py  compose.yml  docker-compose.yml  feature_flags.yml  pyproject.toml  requirements.txt  start.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: branch.yml  main.yml  pr.yml  repo.yml
data/: seed_users.py
docs/: architecture.md  contributing.md  installation.md  testing-guide.md  vulnerabilities.md
src/vuln_bank/: ai_agent_deepseek.py  ai_agent_ollama.py  app.py  auth.py  database.py  feature_flags.py  site_config.py  transaction_graphql.py
src/vuln_bank/static/: openapi.json  style.css  vuln-disclaimer.js
src/vuln_bank/templates/: admin.html  blog.html  careers.html  compliance.html  dashboard.html  forgot_password.html  index.html  login.html  privacy.html  register.html  reset_password.html  terms.html
static/: dashboard.js
templates/: login.html  register.html
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e_admin.py  test_e2e_banking.py  test_e2e_security.py
tests/integration/: conftest.py  test_integration.py  test_routes.py
tests/unit/: conftest.py  test_app_utils.py  test_auth.py  test_feature_flags.py  test_transaction_graphql.py
