[project]
name = "vuln-bank"
version = "0.0.1"
description = "A deliberately vulnerable banking application designed for practicing Security Testing of Web App, APIs, AI integrated App and secure code reviews. Features common vulnerabilities found in real-world applications, making it an ideal platform for security professionals, developers, and enthusiasts to learn pentesting and secure coding practices."
authors = [{ name = "Commando-X" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-cors==4.0.0",
    "flask-swagger-ui==4.11.1",
    "flask==2.0.1",
    "graphene==3.3",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.4.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "werkzeug==2.0.1",
]


[dependency-groups]

dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.10",
]


[tool.uv]
package = false
required-version = ">=0.11.0, <0.12"
