[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vuln-bank"
version = "0.0.1"
description = "A deliberately vulnerable banking application designed for practicing Security Testing of Web App, APIs, AI integrated App and secure code reviews. Features common vulnerabilities found in real-world applications, making it an ideal platform for security professionals, developers, and enthusiasts to learn pentesting and secure coding practices."
authors = [{ name = "Commando-X" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-cors==4.0.0",
    "flask-swagger-ui==4.11.1",
    "flask==2.0.1",
    "graphene==3.3",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.4.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "werkzeug==2.0.1",
]

[dependency-groups]

dev = [
    "coverage>=7.10.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.10",
]

data = [
    "faker>=26.0.0",
]

[tool.uv]
required-version = ">=0.11.0"


[tool.hatch.build.targets.wheel]
packages = ["src/vuln_bank"]

[tool.pytest.ini_options]
python_paths = [
    "src",
]
testpaths = [
    "tests",
]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage/html",
    "--cov-report=xml:tests/coverage/coverage.xml",
    "--cov-fail-under=60",
    "--numprocesses", "auto",
    "--strict-markers",
    "--tb=short",
    "--verbose",
    ]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
    "e2e: End-to-end tests",
    ]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
