[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "vuln-bank"
version = "0.0.1"
description = "A deliberately vulnerable banking application designed for practicing Security Testing of Web App, APIs, AI integrated App and secure code reviews. Features common vulnerabilities found in real-world applications, making it an ideal platform for security professionals, developers, and enthusiasts to learn pentesting and secure coding practices."
authors = [{ name = "Simon Harvey", email = "" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-cors==4.0.0",
    "flask-swagger-ui==4.11.1",
    "flask==2.0.1",
    "graphene==3.3",
    "psycopg2-binary==2.9.9",
    "pycryptodome==3.18.0",
    "pyjwt==2.4.0",
    "python-dotenv==1.0.0",
    "pyyaml==5.3.1",
    "requests==2.31.0",
    "werkzeug==2.0.1",
]

[dependency-groups]

dev = [
    "coverage>=7.10.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.10",
    "ty>=0.0.18",
]

data = [
    "faker>=26.0.0",
]

[tool.uv]
required-version = ">=0.11.0"


[tool.hatch.build.targets.wheel]
packages = ["src/vuln_bank"]


[tool.pytest.ini_options]
python_paths = [
    "src",
]
testpaths = [
    "tests",
]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage/html",
    "--cov-report=xml:tests/coverage/coverage.xml",
    "--cov-fail-under=60",
    "--numprocesses", "auto",
    "--strict-markers",
    "--tb=short",
    "--verbose",
    ]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
    "e2e: End-to-end tests",
    ]


[tool.ruff]
extend-exclude = [
    "__pycache__",
    ".venv",
    "data",
    "tests",
    "scripts",
    ]
line-length = 128
src = [
    "src",
    ]
target-version = "py39"


[tool.ruff.lint]
extend-select = [
  "C4",
  "D200",
  "D201",
  "D204",
  "D205",
  "D206",
  "D210",
  "D211",
  "D213",
  "D300",
  "D400",
  "D402",
  "D403",
  "D404",
  "D419",
  "E",
  "F",
  "FURB",
  "G010",
  "I",
  "INP001",
  "N805",
  "PERF101",
  "PERF102",
  "PERF401",
  "PERF402",
  "PGH004",
  "PGH005",
  "PIE794",
  "PIE796",
  "PIE807",
  "PIE810",
  "PLR",
  "RET502",
  "RET503",
  "RET504",
  "RET505",
  "RUF015",
  "RUF032",
  "RUF033",
  "RUF034",
  "RUF041",
  "RUF046",
  "RUF100",
  "S101",
  "T20",
  "UP",
  "W",
]


[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "S101"
  ]
